--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trillo-front-end",
   "version": "1.0.0",
-  "description": "A mockup hotel booking static site.",
+  "description": "A mockup hotel booking site.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +10,9 @@
     "start": "npm-run-all --parallel watch-sass live-server",
     
     "compile-sass": "node-sass ./sass/main.scss ./css/style.comp.css",
-    "concat-css": "concat -o ./css/style.concat.css ./css/style.comp.css ./css/icon-fonts.css",
-    "prefix-css": "postcss --use autoprefixer -b 'last 10 versions' ./css/style.concat.css -o ./css/style.prefix.css",
+    "prefix-css": "postcss --use autoprefixer -b 'last 10 versions' ./css/style.comp.css -o ./css/style.prefix.css",
     "compress-css": "node-sass ./css/style.prefix.css ./css/style.min.css --output-style compressed",
-    "build-css": "npm-run-all compile-sass concat-css prefix-css compress-css"
+    "build-css": "npm-run-all compile-sass prefix-css compress-css"
   },
   "repository": {
     "type": "git",
